# chainsaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  perf.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs  corpus.rs  corpus_test.rs
docs/: demo.tape
docs/standards/: code.md  commits.md  issues.md  pull-requests.md  releases.md
perf/: results.json
scripts/: bench-all.sh  bench-cold.sh  bench-edit.sh  bench-matrix.sh  bench-warm.sh  find-largest-entry.sh
src/: cache.rs  error.rs  git.rs  graph.rs  lib.rs  loader.rs  main.rs  parser.rs  query.rs  repl.rs  report.rs  resolver.rs  session.rs  vfs.rs  walker.rs
src/lang/: mod.rs
src/lang/python/: conformance.rs  mod.rs  parser.rs  resolver.rs
src/lang/typescript/: mod.rs  parser.rs  resolver.rs
stats/: Cargo.toml
stats/src/: lib.rs
tests/: cache_safety.rs  cli.rs  git_refs.rs  json_roundtrip.rs  negative_cases.rs  perf_registry.rs  property.rs  report_battery.rs  session_reports.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  check.rs  find_entry.rs  hooks.rs  main.rs  perf_judge.rs  perf_validate.rs  registry.rs
