[package]
name = "chainsaw"
version = "0.1.0"
edition = "2024"

[dependencies]
swc_ecma_parser = { version = "33", features = ["typescript"] }
swc_ecma_ast = "20"
swc_common = "18"
oxc_resolver = "11"
rayon = "1"
ignore = "0.4"
bitcode = { version = "0.6", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
