[package]
name = "chainsaw"
version = "0.1.0"
edition = "2024"
description = "Trace transitive import weight in TypeScript and Python codebases"
license = "MIT"
repository = "https://github.com/RocketMan234/chainsaw"
keywords = ["typescript", "python", "imports", "dependencies"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
oxc_parser = "0.113"
oxc_allocator = "0.113"
oxc_span = "0.113"
oxc_ast = "0.113"
oxc_syntax = "0.113"
oxc_resolver = "11"
rayon = "1"
ignore = "0.4"
bitcode = { version = "0.6", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
crossbeam-queue = "0.3"
dashmap = "6"

[lib]
name = "chainsaw"
path = "src/lib.rs"

[[bin]]
name = "chainsaw"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
