[workspace]
members = ["xtask", "stats"]

[package]
name = "chainsaw-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
description = "Trace transitive import weight in TypeScript and Python codebases"
license = "MIT"
repository = "https://github.com/rocketman-code/chainsaw"
keywords = ["typescript", "python", "imports", "dependencies"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["Justfile", "perf.toml", "scripts/", "docs/", ".cargo/", "xtask/", "stats/"]
autobenches = false

[dependencies]
oxc_parser = "0.113"
oxc_allocator = "0.113"
oxc_span = "0.113"
oxc_ast = "0.113"
oxc_syntax = "0.113"
oxc_resolver = "11"
rayon = "1"
bitcode = { version = "0.6", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
crossbeam-queue = "0.3"
dashmap = "6"
tempfile = "3"
rustyline = "15"
gix = { version = "0.79.0", default-features = false, features = ["max-performance-safe"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[lib]
name = "chainsaw"
path = "src/lib.rs"

[[bin]]
name = "chainsaw"
path = "src/main.rs"

[dev-dependencies]
stats = { path = "stats" }
ignore = "0.4"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "corpus_test"
harness = true

[profile.release]
lto = true
codegen-units = 1
