[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats = { path = "../stats" }
toml = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
